# machine-learning-toolbox

./: README.md  pyproject.toml
assignments/: graded_assignment_1.ipynb  graded_assignment_2.ipynb
scripts/: linear_regression_scikit.py  linear_regression_with_toolbox_functions.py
toolbox/: vector_operations.py
toolbox/classsification/: cost_functions.py  gradient_descent_functions.py  predict.py  sigmoid_function.py
toolbox/decision trees/: compute_entropy.py  compute_information_gain.py  get_best_split.py  split_dataset.py
toolbox/linear regression/: cost_function.py  feature_scaling.py  gradient_descent_methods.py  regularized_linear_regression.py
toolbox/neural network/: multi_layer_perceptron_implementation.py  simple_neural_network.py
toolbox/neural network/learning notebooks/: Complete_ML_Process_Explained.ipynb
toolbox/neural network/multi layer perceptron/: multi_layer_perceptron_implementation.py
toolbox/neural network/multiclass_classification/: multiclass_TF.py  softmax.py  softmax_example_TF.py
toolbox/principal component analysis/: pca_algorithm.py
