[project]
name = "machine_learning"
version = "0.1.0"
description = ""
authors = [
    { name = "Alain Nicolas Burger", email = "alain.burger@students.fhnw.ch" }
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "numpy (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]

[tool.poetry]
packages = [
    { include = "toolbox" },
    { include = "scripts" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
