[project]
name = "machine_learning"
version = "0.1.0"
description = ""
authors = [
    { name = "Alain Nicolas Burger", email = "alain.burger@students.fhnw.ch" }
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "matplotlib (>=3.10.1,<4.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.1,<3.0)",
    "tensorflow (>=2.19.0,<3.0.0)",
    "notebook (>=7.4.2,<8.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "jupyterlab (>=4.4.2,<5.0.0)",
    "ipympl (>=0.9.7,<0.10.0)",
]

[tool.poetry]
packages = [
    { include = "toolbox" },
    { include = "scripts" }
]
 
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
